<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general">
        <ListPreference
            app:entries="@array/temperature"
            app:entryValues="@array/temperature"
            app:key="temperature"
            app:title="@string/temperature"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/vent"
            app:entryValues="@array/vent"
            app:key="vent"
            app:title="@string/vent"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/a_propos">
        <PreferenceScreen
            android:key="version"
            android:summary="1.0"
            android:title="@string/version" />

        <PreferenceScreen
            android:summary="@string/developpe_par"
            android:title="@string/developpeurs" />

    </PreferenceCategory>

</PreferenceScreen>