<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pullToRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewVille"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/ville"
                android:textAlignment="center"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textViewJour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="25dp"
                android:text="@string/jour"
                android:textAlignment="center"
                android:textSize="30sp" />


            <!--Condition-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewIcone"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/icone_meteo"
                    android:src="@drawable/icone" />

                <TextView
                    android:id="@+id/textViewCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/condition"
                    android:textSize="20sp" />

            </LinearLayout>

            <!--Température-->
            <TextView
                android:id="@+id/textViewTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="@string/temperature"
                android:textAlignment="center"
                android:textSize="30sp" />

            <!--T-min-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/tmin"
                    android:src="@drawable/t_min" />

                <TextView
                    android:id="@+id/textViewTMin"
                    style="@style/textSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/tmin" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/tmax"
                    android:src="@drawable/t_max" />

                <TextView
                    android:id="@+id/textViewTMax"
                    style="@style/textSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/tmax" />
            </LinearLayout>

            <!--Humidité / Vent-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/humidite"
                    android:src="@drawable/humidite" />

                <TextView
                    android:id="@+id/textViewHumidite"
                    style="@style/textSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/humidite" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/vent"
                    android:src="@drawable/eolienne" />

                <TextView
                    android:id="@+id/textViewVent"
                    style="@style/textSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/vent" />
            </LinearLayout>

            <!--Coucher / Lever du soleil-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/lever_soleil"
                    android:src="@drawable/lever_soleil" />

                <TextView
                    android:id="@+id/textViewLeverSoleil"
                    style="@style/textSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/lever_soleil" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/coucher_soleil"
                    android:src="@drawable/coucher_soleil" />

                <TextView
                    android:id="@+id/textViewCoucherSoleil"
                    style="@style/textSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/coucher_soleil" />
            </LinearLayout>


            <!--Graphique-->
            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="150dp" />
        </LinearLayout>
    </ScrollView>

    <!--Floating Action Button-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/orange"
            android:text=""
            app:icon="@drawable/ic_baseline_add_circle_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <!--Localisation-->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/localisationFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="140dp"
            android:backgroundTint="@color/orange"
            android:contentDescription="@string/recuperer_localisation"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_location_on_24" />


        <!--Saisir une ville-->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/villeFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="90dp"
            android:backgroundTint="@color/orange"
            android:contentDescription="@string/saisir_ville"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_search_24" />


        <!--Paramètres-->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/parametreFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/orange"
            android:contentDescription="@string/parametres"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_settings_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
